ligolang/src/test/contracts/negative/michelson_converter_short_record.mligo
type t1 = { foo : int }
let v1 = { foo = 2 }

let l1 = Layout.convert_to_left_comb (v1:t1)